--- a/style.css
+++ b/style.css
@@ -16,26 +16,26 @@
 
 body{
     background-color: #b0abaa;
-    display:contents ;
+    display: ;
     justify-content: center;
 
 }
 main{
-    height: 195vh;
+    height: 160vh;
     width: 100%;
     max-width: 1000px;
     display: flex;
     flex-wrap: wrap;
     align-content: center;
-    justify-content: center;
-    
+    justify-content: center;   
+    margin: auto;
     
 }
 .texto{/*texto marco zero*/
     font-size: 20px;
     padding: 10px;
-    margin-top: 30%;
     text-align: justify;
+     align-items: center;
     
 }
 h1{
@@ -58,8 +58,7 @@ img{
     justify-content: center;
 
 }
-/* Fim slider*/
-footer{
+ footer{
     width: 100%;
     color: var(--color-neutral-40);
 
@@ -200,3 +199,4 @@ footer .logo_redonda{
         padding: 3rem 2rem;
     }
 }
+
